# final_project_rui_lu

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  installation.rst  make.bat
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: edamam_recipe.doctree  modules.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/edamam_recipe/: edamam_recipe.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: edamam_recipe.rst.txt  modules.rst.txt
docs/_build/html/source/: edamam_recipe.html  modules.html
edamam_recipe/: edamam_recipe.py
edamam_recipe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_edamam_recipe.py
