[tool.poetry]
name = "edamam_recipe"
version = "0.1.0"
description = "Recipes!"
authors = ["Rui Lu <rl3191@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"
python-semantic-release = "^7.8.1"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
